Bug creation first contact on mobile fixed

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -571,12 +571,18 @@ a:hover {
 a:active {
   color: #333333;
 }
+
+
 /*************** Background contact **********/
 .bg-contact {
   background-color: rgba(0, 0, 0, 0.5) !important;
 }
 
 
+/*************** message no contact **********/
+.message-no-contact {
+  text-align: center;;
+}
 
 
 
